	* gtk/gtkfontsel.c (gtk_font_selection_set_font_name): Handle 
	invalid fontnames better. (#136926, Michael R. Walton)
	
	Stop cursor blinking in non-editable regions of a text view.
	(#311508, Torbjörn Andersson)
	
	* gtk/gtktextview.c (gtk_text_view_check_cursor_blink): 
	(cursor_blinks): Take editability into account when deciding
	whether the cursor blinks.
	(gtk_text_view_button_release_event): 
	(gtk_text_view_move_cursor_internal): Update cursor blinking here.

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_start_editing): 
	Use connect_after to connect to the focus_out event. This
	ensures that the entry has already stopped blinking by the time
	we emit the edited signal.  (#315229, Thomas Leonard)

	* tests/testgtk.c: Use GDK_MOD1_MASK, not GDK_ALT_MASK.

	* gtk/gtkwindow.c (gtk_window_parse_geometry): Don't set
	unsigned ints to -1.  (#315481, Kjartan Maraas)

	* gtk/gtkcalendar.c (gtk_calendar_init): first_weekday is relative
	to week_1stday, not to Sunday. Gotta love the ISO 14652 guys...
	(#314473, Stanislav Brabec)

2005-09-09  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_get_visible_range): Document
	memory handling.  (#314975, Torsten Schoenfeld)

	* gtk/gtkiconview.c (gtk_icon_view_class_init): 
	* gtk/gtkfilesel.c (gtk_file_selection_class_init): 
	* gtk/gtkcombobox.c (gtk_combo_box_class_init): 
	* gtk/gtklabel.c (gtk_label_class_init): 
	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_class_init): 
	Stylistic improvements and clarifications for some blurbs. 
	(#315520, Clytie Siddall)

2005-09-09  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkdisplay-win32.c (gdk_display_get_name): Cache the
	display name. There is only one GdkDisplay on Win32, and
	constructing the display name isn't entirely trivial, so cacheing
	is probably worth it. For instance GIMP calls this function a lot.
	(gdk_display_open): Call gdk_display_get_name() to prime the
	cached name.