@@ -1,3 +1,9 @@
+2005-09-09  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_button_event): 
+	Make drag reordering work properly for columns other than the
+	first.  (#315054, Dan Winship)
+	
 	* gtk/gtkfontsel.c (gtk_font_selection_set_font_name): Handle 
 	invalid fontnames better. (#136926, Michael R. Walton)
 	
